# anomaly-factory

./: .pre-commit-config.yaml  README.md  config.py  gui_interface.py  iris_classification_model.joblib  main.py  pyproject.toml  requirements1.txt  settings.py  train.py  xgboost_tuner.py
experiment_tracking/: datamodule.py  optimizing_tracker.py  tuning_experiment.py
model/: iris_classification_model.joblib
