[tool.poetry]
name = "anomaly-factory"
version = "0.1.0"
description = ""
authors = ["Taeyong Jeon <taeyongjeon24@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pre-commit = "^3.6.0"
pandas = "^2.2.0"
scikit-learn = "^1.4.0"
ipykernel = "^6.29.0"
mlflow = "^2.10.0"
optuna = "^3.5.0"
xgboost = "^2.0.3"
streamlit = "^1.31.1"
redis = "^5.0.3"
structlog = "^24.1.0"
pydantic = "^2.7.1"
pydantic-settings = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
